--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ jupyter
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
 jupyterlab
-keras
+keras==2.0.7
 matplotlib
 numpy
 pandas
 scikit-learn[alldeps]
 scipy
 seaborn
-tensorflow
+tensorflow==1.3.0
