--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ jupyter
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
 jupyterlab
-keras==2.0.7
+keras
 matplotlib
 numpy
 pandas
 scikit-learn[alldeps]
 scipy
 seaborn
-tensorflow==1.3.0
+tensorflow
