--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Keras
-graphviz
-ipython
-joblib
-jupyter
-jupyter_contrib_nbextensions
-jupyter_nbextensions_configurator
-jupyterlab
-matplotlib
-numpy
-pandas
-pydotplus
-scikit-learn[alldeps]
-scipy
-seaborn
-tensorflow
+Keras==2.2.4
+graphviz==0.10.1
+ipython==7.2.0
+joblib==0.13.2
+jupyter==1.0.0
+jupyter-contrib-nbextensions==0.5.1
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab==0.35.4
+matplotlib==3.0.0
+numpy==1.14.5
+pandas==0.23.3
+pydotplus==2.0.2
+scikit-learn==0.20.2
+scipy==1.2.0
+seaborn==0.9.0
+tensorflow==1.12.0
